working basic auth with some bugs added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<!-- <app-user-list></app-user-list>
-<app-messenger></app-messenger> -->
-<router-outlet></router-outlet>
+<app-nav></app-nav>
+<main>
+  <router-outlet></router-outlet>
+</main>
