--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -87,7 +87,7 @@
          </div>
          <br />
          <div>
-           <button [disabled]="signUpForm.invalid" type="submit">Save</button>
+           <button [disabled]="signUpForm.invalid" type="submit">Sign Up</button>
            <button type="button" (click)="formSignUp.resetForm()">Reset</button>
          </div>
          <br>
