--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -23,7 +23,7 @@
          </div>
          <br>
          <div>
-           <button type="submit">Save</button>
+           <button type="submit">Log In</button>
            <button type="button" (click)="formLogin.resetForm()">Reset</button>
          </div>
          <br>
