--- a/src/app/projects/controllers/project-list/project-list.component.html
+++ b/src/app/projects/controllers/project-list/project-list.component.html
@@ -1,5 +1,5 @@
 <section>
-  <h2>Admin page</h2>
+  <h2>Project list page</h2>
   <div>
     <table mat-table>
       <thead>
@@ -14,7 +14,7 @@
         <td mat-cell>{{ project.id }}</td>
         <td mat-cell>{{ project.name }}</td>
         <td mat-cell>{{ project.description }}</td>
-        <td mat-cell>{{ project.owner.username }}</td>
+        <td mat-cell>{{ project.owner.userName }}</td>
       </tr>
     </table>
   </div>
